--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".others"></activity>
+        <activity android:name=".others"/>
         <activity android:name=".electronics" />
         <activity android:name=".vehicle" />
         <activity android:name=".newAdActivity" />
