--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sagar.betaversion">
+    package="com.sagar.betaversion" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -13,8 +13,8 @@
         android:label="Beta Version"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
-        <activity android:name=".myAds.myMisc"></activity>
+        android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar" >
+        <activity android:name=".myAds.myMisc" />
         <activity android:name=".myAds.myBooks" />
         <activity android:name=".myAds.myElectronic" />
         <activity android:name=".myAds.myVehicle" />
@@ -42,7 +42,7 @@
             android:screenOrientation="nosensor" />
         <activity
             android:name=".LoginActivity"
-            android:screenOrientation="nosensor">
+            android:screenOrientation="nosensor" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
