--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,10 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="MANIT KART"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_manit_logo_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".about"></activity>
+        <activity android:name=".about"/>
         <activity android:name=".FinalImagePreview" />
         <activity android:name=".myAds.myMisc" />
         <activity android:name=".myAds.myBooks" />
@@ -63,10 +63,6 @@
         <activity
             android:name=".profile"
             android:screenOrientation="nosensor" />
-
-        <meta-data
-            android:name="preloaded_fonts"
-            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
