--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,7 @@
             android:screenOrientation="nosensor" />
         <activity
             android:name=".LoginActivity"
+            android:theme="@style/SplashTheme"
             android:screenOrientation="nosensor">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
